# MUM

./: .gitignore  IMPLEMENTATION.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
MUMBench/: __init__.py  aggregator.py  cli.py  config.py  judge.py  report.py  runner.py  scorer.py  subset_selector.py
MUMBench/baselines/: __init__.py  base.py  long_context.py  no_memory.py  rag_baseline.py
MUMBench/prompts/: __init__.py
MUMBench/scenario_1/: scenario_1_complete.json
MUMBench/scenario_3/: scenario_3_complete.json
config/: evaluation.yaml  generation.yaml  models.yaml
config/scenarios/: scenario_1.yaml  scenario_2.yaml  scenario_3.yaml  scenario_4.yaml  scenario_5.yaml
datagen/: cli.py
datagen/llm/: __init__.py  client.py  cost_tracker.py  token_counter.py
datagen/models/: __init__.py  schemas.py
datagen/pipeline/: orchestrator.py  phase1_document_prep.py  phase2_conversation.py  phase3_annotation.py
datagen/prompts/: __init__.py  base.py  conversation_system.py  eval_question_gen.py  session_summary.py
datagen/scenarios/: __init__.py  base.py  scenarios.py
datagen/utils/: logging.py  pdf_reader.py
eval/: metrics.py  run_eval.py
eval/baselines/: full_context.py  rag_summaries.py
memory/: README.md  cli.py
memory/evaluation/: config.py  export.py  judge.py  (+2 more)
output/: mumm_core.json
scripts/: cost_estimate.py  dry_run.py  export_hf.py  validate_documents.py
src/: cli.py
tests/: test_aggregator.py  test_judge.py  test_pipeline.py  test_prompts.py  test_scenarios.py  test_schemas.py  test_scorer.py  test_subset.py
(+376 files in other folders)
